# stencil

./: README.md  stencil.cabal
Text/: Stencil.hs
Text/Stencil/: Generic.hs  Internal.hs
tests/: Tests.hs
tests/Text/: StencilTest.hs
